2012-04-23  Glenn Randers-Pehrson  <glennrp@simplesystems.org> 

	* doc/*.imdoc: some example commandlines in the documentation
	were missing the leading "gm ".

2012-04-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (FormMultiPartFilename): No longer add a
	printf-style scene formatting specification to filenames which do
	not have one and no longer automatically operate in 'adjoin' mode
	in such cases.  This is a BIG CHANGE for users who may have become
	used to this automatic functionality.  The simple solution to
	update existing scripts depending on this behavior is to change
	any bare filenames to include a format specification like
	"image.jpg.%d" and add +adjoin to the command line.  The reason
	why this change is made is that the output files produced by any
	given operation were unpredictable, and it was causing temporary
	files to be leaked due to the renaming.

2012-04-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (WriteBMPImage): Enforce that image width and
	height do not exceed BMP dimensions.  BMP dimensions are
	represented by a signed type.  BMPv2 supports maximum dimensions
	of 32k by 32k.

2012-04-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/info.c (WriteINFOImage): When driven by the 'convert'
	utility, -format produces user-controlled formatted output similar
	to -format in 'identify'.  This is accomplished via a
	'info:format=value' define.

	* magick/image.c (AddDefinition): New function for adding just one
	define to definitions list.

2012-04-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pnm.c (ReadPNMImage): Completely disable OpenMP in reader
	because there is too much contention.

	* magick/pixel_iterator.c: Dereference image to be modified in
	non-threaded context in order to lessen contention.

	* magick/semaphore.c (AllocateSemaphoreInfo): Make sure that
	SemaphoreInfo does not share cache lines with another semaphore.
