@@ -36,6 +36,14 @@
 <div class="document">
 
 
+<p>2012-04-23  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/image.c (SetImageInfo): Remove automatic adjoin mode
+support logic.
+(AddDefinition): Fix use of uninitialized variable.</li>
+</ul>
+</blockquote>
 <p>2012-04-23  Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simplesystems&#46;org">glennrp<span>&#64;</span>simplesystems<span>&#46;</span>org</a>&gt;</p>
 <blockquote>
 <ul class="simple">
@@ -52,8 +60,8 @@ not have one and no longer automatically operate in 'adjoin' mode
 in such cases.  This is a BIG CHANGE for users who may have become
 used to this automatic functionality.  The simple solution to
 update existing scripts depending on this behavior is to change
-any bare filenames to include a format specification like
-&quot;image.jpg.%d&quot; and add +adjoin to the command line.  The reason
+any bare filenames to include a format specification similar to
+&quot;image-%d.jpg&quot; and add +adjoin to the command line.  The reason
 why this change is made is that the output files produced by any
 given operation were unpredictable, and it was causing temporary
 files to be leaked due to the renaming.</li>
