@@ -1,3 +1,9 @@
+2012-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/image.c (SetImageInfo): Remove automatic adjoin mode
+	support logic.
+	(AddDefinition): Fix use of uninitialized variable.
+
 2012-04-23  Glenn Randers-Pehrson  <glennrp@simplesystems.org> 
 
 	* doc/*.imdoc: some example commandlines in the documentation
@@ -11,8 +17,8 @@
 	in such cases.  This is a BIG CHANGE for users who may have become
 	used to this automatic functionality.  The simple solution to
 	update existing scripts depending on this behavior is to change
-	any bare filenames to include a format specification like
-	"image.jpg.%d" and add +adjoin to the command line.  The reason
+	any bare filenames to include a format specification similar to
+	"image-%d.jpg" and add +adjoin to the command line.  The reason
 	why this change is made is that the output files produced by any
 	given operation were unpredictable, and it was causing temporary
 	files to be leaked due to the renaming.
